<resources>
    <string name="app_name">Calypso</string>
    <string name="calypso_logo">Calypso Logo</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in">Log In</string>
    <string name="sports_streaming">Sports Streaming</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="close">close</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_add_team">Add Team</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_show_or_hide_password">Show or hide password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_log_in">Log In</string>
    <string name="overlays_settings_teams">Teams</string>
    <string name="overlays_settings_team_1">Team 1</string>
    <string name="overlays_settings_team_2">Team 2</string>
    <string name="overlays_settings_scoreboard">Scoreboard</string>
    <string name="overlays_settings_select_scoreboard">Select Scoreboard</string>
    <string name="overlays_settings_show_logos">Show logos</string>
    <string name="overlays_settings_save_changes">Save Changes</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_show_or_hide_password">Show or hide password</string>
    <string name="stream_settings_add_new_profile">Add New Profile</string>
    <string name="stream_settings_add_new_profile_2">Add New Profile</string>
    <string name="stream_settings_profile_settings">Profile Settings</string>
    <string name="stream_settings_profile_name">Profile Name</string>
    <string name="stream_settings_stream_connections">Stream Connections</string>
    <string name="stream_settings_select_connection">Select Connection</string>
    <string name="stream_settings_rtmp_url">RTMP URL</string>
    <string name="stream_settings_stream_key">Stream Key</string>
    <string name="stream_settings_connection_alias">Connection Alias</string>
    <string name="stream_settings_add">ADD</string>
    <string name="stream_settings_update">UPDATE</string>
    <string name="stream_settings_delete">DELETE</string>
    <string name="stream_settings_streaming_video_settings">Streaming Video Settings</string>
    <string name="stream_settings_video_source">Video Source</string>
    <string name="stream_settings_codec">Codec</string>
    <string name="stream_settings_resolution">Resolution</string>
    <string name="stream_settings_fps">FPS</string>
    <string name="stream_settings_bitrate">Bitrate</string>
    <string name="stream_settings_5">5</string>
    <string name="stream_settings_record_video_settings">Record Video Settings</string>
    <string name="stream_settings_resolution_2">Resolution</string>
    <string name="stream_settings_bitrate_2">Bitrate</string>
    <string name="stream_settings_5_2">5</string>
    <string name="stream_settings_audio_settings">Audio Settings</string>
    <string name="stream_settings_audio_source">Audio Source</string>
    <string name="stream_settings_audio_bitrate_kbps">Audio Bitrate (kbps)</string>
    <string name="stream_settings_create_profile">Create Profile</string>
    <string name="stream_settings_active_video_settings">Video Settings</string>
    <string name="stream_settings_active_video_source">Video Source</string>
    <string name="stream_settings_active_bitrate">Bitrate</string>
    <string name="stream_settings_active_5">5</string>
    <string name="stream_settings_active_audio_settings">Audio Settings</string>
    <string name="stream_settings_active_audio_source">Audio Source</string>
    <string name="stream_settings_active_apply_changes">Apply Changes</string>
    <string name="item_new_team_new_team">New Team</string>
    <string name="item_new_team_name">Name</string>
    <string name="item_new_team_alias">Alias</string>
    <string name="item_new_team_add_player">Add Player</string>
    <string name="item_new_team_save">Save</string>
    <string name="item_player_row_name">Name</string>
    <string name="item_player_row_n">Nº</string>
    <string name="item_team_card_team_name">Team name</string>
    <string name="item_team_card_name">Name</string>
    <string name="item_team_card_alias">Alias</string>
    <string name="item_team_card_add_player">Add Player</string>
    <string name="item_team_card_delete">Delete</string>
    <string name="item_team_card_save">Save</string>
    <string name="home_settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_select_language">Select Language</string>
    <string name="settings_delete_account">Delete Account</string>
    <string name="settings_delete_account_btn">Delete Account</string>
    <string name="settings_delete_account_confirm_message">Are you sure you want to delete your account?</string>
</resources>